fix the 1st diagram tooltip (was hidden by overflow)

--- a/pyscada/hmi/static/pyscada/css/pyscada/pyscada-theme.css
+++ b/pyscada/hmi/static/pyscada/css/pyscada/pyscada-theme.css
@@ -179,7 +179,6 @@ html,body {
 }
 
 #content {
-	overflow:auto;
 	padding-bottom:50px;
 }
 
